log/build_2024-01-17_19-28-43/assignment_template/stdout_stderr.log
running egg_info
writing ../build/assignment_template/assignment_template.egg-info/PKG-INFO
writing dependency_links to ../build/assignment_template/assignment_template.egg-info/dependency_links.txt
writing entry points to ../build/assignment_template/assignment_template.egg-info/entry_points.txt
writing requirements to ../build/assignment_template/assignment_template.egg-info/requires.txt
writing top-level names to ../build/assignment_template/assignment_template.egg-info/top_level.txt
reading manifest file '../build/assignment_template/assignment_template.egg-info/SOURCES.txt'
writing manifest file '../build/assignment_template/assignment_template.egg-info/SOURCES.txt'
running build
running build_py
copying assignment_template/example_nav_to_pose.py -> /home/amd/src/ros2_ws/src/Limo/build/assignment_template/build/lib/assignment_template
copying assignment_template/report.py -> /home/amd/src/ros2_ws/src/Limo/build/assignment_template/build/lib/assignment_template
copying assignment_template/object_detector.py -> /home/amd/src/ros2_ws/src/Limo/build/assignment_template/build/lib/assignment_template
running install
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
running install_lib
copying /home/amd/src/ros2_ws/src/Limo/build/assignment_template/build/lib/assignment_template/example_nav_to_pose.py -> /home/amd/src/ros2_ws/src/Limo/install/assignment_template/lib/python3.10/site-packages/assignment_template
copying /home/amd/src/ros2_ws/src/Limo/build/assignment_template/build/lib/assignment_template/report.py -> /home/amd/src/ros2_ws/src/Limo/install/assignment_template/lib/python3.10/site-packages/assignment_template
copying /home/amd/src/ros2_ws/src/Limo/build/assignment_template/build/lib/assignment_template/object_detector.py -> /home/amd/src/ros2_ws/src/Limo/install/assignment_template/lib/python3.10/site-packages/assignment_template
byte-compiling /home/amd/src/ros2_ws/src/Limo/install/assignment_template/lib/python3.10/site-packages/assignment_template/example_nav_to_pose.py to example_nav_to_pose.cpython-310.pyc
  File "/home/amd/src/ros2_ws/src/Limo/install/assignment_template/lib/python3.10/site-packages/assignment_template/example_nav_to_pose.py", line 189
    vicinity_radius = 0.8z  # Define the radius (adjust as needed)
                        ^
SyntaxError: invalid decimal literal

byte-compiling /home/amd/src/ros2_ws/src/Limo/install/assignment_template/lib/python3.10/site-packages/assignment_template/report.py to report.cpython-310.pyc
byte-compiling /home/amd/src/ros2_ws/src/Limo/install/assignment_template/lib/python3.10/site-packages/assignment_template/object_detector.py to object_detector.cpython-310.pyc
running install_data
running install_egg_info
removing '/home/amd/src/ros2_ws/src/Limo/install/assignment_template/lib/python3.10/site-packages/assignment_template-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../build/assignment_template/assignment_template.egg-info to /home/amd/src/ros2_ws/src/Limo/install/assignment_template/lib/python3.10/site-packages/assignment_template-0.0.0-py3.10.egg-info
running install_scripts
Installing example_nav_to_pose script to /home/amd/src/ros2_ws/src/Limo/install/assignment_template/lib/assignment_template
Installing object_detector script to /home/amd/src/ros2_ws/src/Limo/install/assignment_template/lib/assignment_template
Installing report script to /home/amd/src/ros2_ws/src/Limo/install/assignment_template/lib/assignment_template
writing list of installed files to '/home/amd/src/ros2_ws/src/Limo/build/assignment_template/install.log'
